[package]
name = "sernet"
version = "0.1.0"
edition = "2021"

[lib]
name = "sernet"
path = "src/lib.rs"

[[example]]
name = "serialport"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = { git = "https://github.com/vorner/tuntap", default-features = false }

[dev-dependencies]
serialport = { version = "4.0", default-features = false }